syntax = "proto3"; // стандартный синтаксис 
option csharp_namespace = "stockapi.Grpc"; // в каком неймспейсе генерировать классы 
package StockApi; // namespace внутри proto-файла

// Grpc сервис (его описание, описание методов)
service StockApiGrpc {
  // какие методы будем поддерживать, принимать 
  rpc GetAllStockItems (GetAllStockItemsRequest) returns (GetAllStockItemsResponce); // метод - параметры входа и выхода 
  rpc StockItemDemand (StockItemDemandRequest) returns (StockItemDemandResponce);
  rpc GetInfo (GetInfoRequest) returns (GetInfoResponce);
}

message GetAllStockItemsRequest {
  // вх параметров нет 
}

message GetAllStockItemsResponce {
  // возвращает коллекцию 
  repeated GetAllStockItemsResponceUnit stocks = 1;
  
}

message GetAllStockItemsResponceUnit {
  // один юнит (товар)
  int64 item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
}

// запросить мерч
message StockItemDemandRequest {
  string item_name = 1;
  int32 quantity = 2;
}

message StockItemDemandResponce {

}

// получить информацию о выдаче мерча
message GetInfoRequest {
  
}

message GetInfoResponce {
  repeated GetInfoDemandResponceUnit Demands = 1;
}

import "google/protobuf/timestamp.proto";

message GetInfoDemandResponceUnit {
  int64 item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp date = 4;
}